@@ -135,11 +135,11 @@ sub mkmanifest {
     if ($skip->($file)) {
         # Policy: only remove files if they're listed in MANIFEST.SKIP.
         # Don't remove files just because they don't exist.
-        warn "Removed from $MANIFEST: $file\n" if $Verbose and exists $read->{$file};
+        print {*STDERR} "Removed from $MANIFEST: $file\n" if $Verbose and exists $read->{$file};
         next;
     }
     if ($Verbose){
-        warn "Added to $MANIFEST: $file\n" unless exists $read->{$file};
+        print {*STDERR} "Added to $MANIFEST: $file\n" unless exists $read->{$file};
     }
     my $text = $all{$file};
     $file = _unmacify($file);
@@ -182,7 +182,7 @@ sub manifind {
 
     my $wanted = sub {
     my $name = clean_up_filename($File::Find::name);
-    warn "Debug: diskfile $name\n" if $Debug;
+    print {*STDERR} "Debug: diskfile $name\n" if $Debug;
     return if -d $_;
 
         if( $Is_VMS_lc ) {
@@ -270,7 +270,7 @@ sub skipcheck {
     my @skipped = ();
     foreach my $file (_sort keys %$found){
         if (&$matches($file)){
-            warn "Skipping $file\n" unless $Quiet;
+            print {*STDERR} "Skipping $file\n" unless $Quiet;
             push @skipped, $file;
             next;
         }
@@ -288,14 +288,14 @@ sub _check_files {
 
     my(@missfile) = ();
     foreach my $file (_sort keys %$read){
-        warn "Debug: manicheck checking from $MANIFEST $file\n" if $Debug;
+        print {*STDERR} "Debug: manicheck checking from $MANIFEST $file\n" if $Debug;
         if ($dosnames){
             $file = lc $file;
             $file =~ s=(\.(\w|-)+)=substr ($1,0,4)=ge;
             $file =~ s=((\w|-)+)=substr ($1,0,8)=ge;
         }
         unless ( exists $found->{$file} ) {
-            warn "No such file: $file\n" unless $Quiet;
+            print {*STDERR} "No such file: $file\n" unless $Quiet;
             push @missfile, $file;
         }
     }
@@ -313,10 +313,10 @@ sub _check_manifest {
     my @missentry = ();
     foreach my $file (_sort keys %$found){
         next if $skip->($file);
-        warn "Debug: manicheck checking from disk $file\n" if $Debug;
+        print {*STDERR} "Debug: manicheck checking from disk $file\n" if $Debug;
         unless ( exists $read->{$file} ) {
             my $canon = $Is_MacOS ? "\t" . _unmacify($file) : '';
-            warn "Not in $MANIFEST: $file$canon\n" unless $Quiet;
+            print {*STDERR} "Not in $MANIFEST: $file$canon\n" unless $Quiet;
             push @missentry, $file;
         }
     }
@@ -343,7 +343,7 @@ sub maniread {
     my $read = {};
     local *M;
     unless (open M, "< $mfile"){
-        warn "Problem opening $mfile: $!";
+        print {*STDERR} "Problem opening $mfile: $!";
         return $read;
     }
     local $_;
@@ -377,7 +377,7 @@ sub maniread {
                 if (@pieces > 2)
                     { $base = shift(@pieces) . '.' . join('_',@pieces); }
                 my $okfile = "$dir$base";
-                warn "Debug: Illegal name $file changed to $okfile\n" if $Debug;
+                print {*STDERR} "Debug: Illegal name $file changed to $okfile\n" if $Debug;
                 $file = $okfile;
             }
             $file = lc($file)
@@ -447,14 +447,14 @@ sub _check_mskip_directives {
     my @lines = ();
     my $flag = 0;
     unless (open M, "< $mfile") {
-        warn "Problem opening $mfile: $!";
+        print {*STDERR} "Problem opening $mfile: $!";
         return;
     }
     while (<M>) {
         if (/^#!include_default\s*$/) {
         if (my @default = _include_mskip_file()) {
             push @lines, @default;
-        warn "Debug: Including default MANIFEST.SKIP\n" if $Debug;
+        print {*STDERR} "Debug: Including default MANIFEST.SKIP\n" if $Debug;
         $flag++;
         }
         next;
@@ -463,7 +463,7 @@ sub _check_mskip_directives {
         my $external_file = $1;
         if (my @external = _include_mskip_file($external_file)) {
             push @lines, @external;
-        warn "Debug: Including external $external_file\n" if $Debug;
+        print {*STDERR} "Debug: Including external $external_file\n" if $Debug;
         $flag++;
         }
             next;
@@ -475,9 +475,9 @@ sub _check_mskip_directives {
     my $bakbase = $mfile;
     $bakbase =~ s/\./_/g if $Is_VMS_nodot;  # avoid double dots
     rename $mfile, "$bakbase.bak";
-    warn "Debug: Saving original $mfile as $bakbase.bak\n" if $Debug;
+    print {*STDERR} "Debug: Saving original $mfile as $bakbase.bak\n" if $Debug;
     unless (open M, "> $mfile") {
-        warn "Problem opening $mfile: $!";
+        print {*STDERR} "Problem opening $mfile: $!";
         return;
     }
     print M $_ for (@lines);
@@ -490,12 +490,12 @@ sub _check_mskip_directives {
 sub _include_mskip_file {
     my $mskip = shift || $DEFAULT_MSKIP;
     unless (-f $mskip) {
-        warn qq{Included file "$mskip" not found - skipping};
+        print {*STDERR} qq{Included file "$mskip" not found - skipping};
         return;
     }
     local (*M, $_);
     unless (open M, "< $mskip") {
-        warn "Problem opening $mskip: $!";
+        print {*STDERR} "Problem opening $mskip: $!";
         return;
     }
     my @lines = ();
